Refactor requirements and enhance card generation logic
- Updated requirements.txt to remove specific versioning for packages, allowing for more flexibility in dependency management.
- Improved the `format_quantity` function to return 0 for invalid inputs instead of the original string.
- Added `get_category_emoji` function to assign emojis based on product categories.
- Enhanced `format_months_no_sale` to provide clearer output for products with no movement.
- Refactored `send_or_edit_product_card` to streamline the process of generating product cards and improved error handling.
- Introduced analytics module for generating product and stock history reports.
- Added backup and export handlers for managing database backups and exporting data to Excel.
- Implemented throttling middleware to prevent spam from users.
- Created utility functions for handling backups and saving dataframes to Excel.
- Developed an import parser class to validate and normalize imported data from Excel and ODS files.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ archives/
 data.csv
 data.xlsx
 *.json
+
+alembic
+migrations/
+# --- Інші тимчасові файли ---
+alembic.ini
+*.db
+backups/
+epicservice_db
